--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,10 @@ jobs:
 
       # build and push Docker image
       - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t developmentseed/circleci:node8.4-python2.7 - < images/node8.4-python2.7
           docker login -u $DOCKER_USER -p $DOCKER_PASS
+
+          docker build -t developmentseed/circleci:node8.4-python2.7 - < images/node8.4-python2.7
           docker push developmentseed/circleci:node8.4-python2.7
+
+          docker build -t developmentseed/circleci:node4.4-ruby2.1 - < images/node4.4-ruby2.1
+          docker push developmentseed/circleci:node4.4-ruby2.1
