--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,6 @@ jobs:
 
           docker build -t developmentseed/circleci:node8.4-python2.7 - < images/node8.4-python2.7
           docker push developmentseed/circleci:node8.4-python2.7
+
+          docker build -t developmentseed/circleci:node8.9-azure-cli - < images/node8.9-azure-cli
+          docker push developmentseed/circleci:node8.9-azure-cli
