use quay.io instead of Docker Hub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,10 @@ jobs:
 
       # build and push Docker image
       - run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASS
+          docker login -u $DOCKER_USER -p $DOCKER_PASS quay.io
 
           docker build -t hotosm/circleci:node9.10-python2.7 - < images/node9.10-python2.7
-          docker push hotosm/circleci:node9.0-python2.7
+          docker push quay.io/hotosm/circleci:node9.0-python2.7
 
           docker build -t hotosm/circleci:node9.10-azure-cli - < images/node9.10-azure-cli
-          docker push hotosm/circleci:node9.0-azure-cli
+          docker push quay.io/hotosm/circleci:node9.0-azure-cli
