add node10.16 image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,5 +15,8 @@ jobs:
           docker build -t quay.io/hotosm/circleci:node9.10-python2.7 - < images/node9.10-python2.7
           docker push quay.io/hotosm/circleci:node9.10-python2.7
 
+          docker build -t quay.io/hotosm/circleci:node10.16-python2.7 - < images/node10.16-python2.7
+          docker push quay.io/hotosm/circleci:node10.16-python2.7
+
           docker build -t quay.io/hotosm/circleci:node9.10-azure-cli - < images/node9.10-azure-cli
           docker push quay.io/hotosm/circleci:node9.10-azure-cli
